@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.423 2002/10/31 02:06:50 dmcmahill Exp $
+$NetBSD: CHANGES,v 1.424 2002/10/31 08:17:24 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3465,3 +3465,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Added dnstop-20021030 [itojun 2002-10-30]
 	Updated phoenix-linux to 0.4 [grant 2002-10-31]
 	Updated latex-mk to 0.9.1 [dmcmahill 2002-10-30]
+	Updated aalib-x11 to 1.4.0.4nb2 [jlam 2002-10-31]
